--- a/amp.html
+++ b/amp.html
@@ -37,7 +37,7 @@
     <li><a href="http://morsecode-api.de">Morsecode API</a></li>
     <li><a href="https://artikel-des-tages.de">Artikel des Tages</a></li>
     <li><a href="http://collegecast.de">Collegecast</a></li>
-    <li><a href="https://leagesdiving.com">Leagues Ahead Diving Gran Canaria</a></li>
+    <li><a href="https://leaguesdiving.com">Leagues Ahead Diving Gran Canaria</a></li>
     <li><a href="https://hans-schultz.de">hans-schultz.de</a></li>
     <li><a href="https://fish-hand-signals.de">Fish Hand Signals Scuba Diving</a></li>
     <li><a href="https://yoga-quickborn.de">Yoga Quickborn</a></li>
