--- a/amp.html
+++ b/amp.html
@@ -30,7 +30,7 @@
     <li><a href="https://sensible-defaults.com">Sensible Defaults</a></li>
     <li><a href="https://edi-parser-api.de">EDI/EDIFACT Parser API SaaS</a></li>
     <li><a href="https://ecommerce-automation.eu">eCommerce Automation Europe</a></li>
-    <li><a href="https://ecommerce-automation.de">eCommerce Automation Deutschland</a></li>
+    <li><a href="http://ecommerce-automation.de">eCommerce Automation Deutschland</a></li>
     <li><a href="https://pocket-living.com">Pocket Living</a></li>
     <li><a href="https://pocket-living.de">Pocket Living Deutsch</a></li>
     <li><a href="https://threephotodinner.com">Three Photo Dinner</a></li>
